@@ -5,7 +5,7 @@
 * INRIA request for extended UNIX:
   http://caml.inria.fr/mantis/view.php?id=5063
   http://caml.inria.fr/mantis/view.php?id=2533 (<- very interesting)
-  http://caml.inria.fr/mantis/view.php?id=3851
+  http://caml.inria.fr/mantis/view.php?id=3851 (DONE)
   http://caml.inria.fr/mantis/view.php?id=480
 
 Wanted functions:
