@@ -8,7 +8,8 @@ Copyrights:
               (C) 2010 ygrek,
               (C) 2009 Sylvain Le Gall,
               (C) 2008-2009 Talend Inc.,
-              (C) 2010 Stéphane Glondu
+              (C) 2010 Stéphane Glondu,
+              (C) 2005 Joshua Smith
 Homepage:     http://extunix.forge.ocamlcore.org/
 BuildTools:   ocamlbuild, camlp4
 Plugins:      DevFiles (0.1.0), META (0.1.0)
@@ -39,7 +40,7 @@ Library extunix
             eventfd.c, dirfd.c, fsync.c, statvfs.c, atfile.c,
             ioctl_siocgifconf.c, uname.c, fadvise.c, fallocate.c,
             tty_ioctl.c, unistd.c, stdlib.c, signalfd.c, ptrace.c,
-            resource.c, mman.c
+            resource.c, mman.c, time.c
   BuildDepends: unix
 
 Executable test
