@@ -1,5 +1,5 @@
 # OASIS_START
-# DO NOT EDIT (digest: b02b94517b2e4b8c01fe3920f403bf3c)
+# DO NOT EDIT (digest: 880e54046f335838092222f043fe877e)
 # Library extunix
 "src": include
 <src/*.ml{,i}>: oasis_library_extunix_ccopt
@@ -19,6 +19,7 @@
 "src/ptrace.c": oasis_library_extunix_ccopt
 "src/resource.c": oasis_library_extunix_ccopt
 "src/mman.c": oasis_library_extunix_ccopt
+"src/time.c": oasis_library_extunix_ccopt
 <src/extunix.{cma,cmxa}>: use_libextunix
 <src/*.ml{,i}>: pkg_unix
 "src/eventfd.c": pkg_unix
@@ -37,6 +38,7 @@
 "src/ptrace.c": pkg_unix
 "src/resource.c": pkg_unix
 "src/mman.c": pkg_unix
+"src/time.c": pkg_unix
 # Executable test
 <test/test.{native,byte}>: use_extunix
 <test/test.{native,byte}>: pkg_unix
