@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: 5b7224a3c3ba74bc7dbcd0cd4e3eb61c) *)
+(* DO NOT EDIT (digest: bb1edd42de7b928a62c7ef1692ba5ea5) *)
 (*
    Regenerated by OASIS v0.2.0~alpha1
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5017,7 +5017,8 @@ let setup_t =
                "(C) 2010 ygrek";
                "(C) 2009 Sylvain Le Gall";
                "(C) 2008-2009 Talend Inc.";
-               "(C) 2010 St\195\169phane Glondu"
+               "(C) 2010 St\195\169phane Glondu";
+               "(C) 2005 Joshua Smith"
             ];
           maintainers = [];
           authors =
@@ -5111,7 +5112,8 @@ let setup_t =
                            "signalfd.c";
                            "ptrace.c";
                            "resource.c";
-                           "mman.c"
+                           "mman.c";
+                           "time.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
