@@ -382,3 +382,23 @@ external munlockall : unit -> unit = "caml_extunix_munlockall"
 
 END
 
+HAVE STRTIME
+(** {2 Time conversion} *)
+
+(** This function is the converse of the {!strftime} function.
+  [strptime fmt data] convert a string containing time information [data]
+  into a [tm] struct according to the format specified by [fmt]. *)
+external strptime: string -> string -> Unix.tm = "caml_extunix_strptime"
+
+(** Return the ascii representation of a given [tm] argument. The
+  ascii time is returned in the form of a string like 
+  'Wed Jun 30, 21:21:21 2005\n' *)
+external asctime: Unix.tm -> string = "caml_extunix_asctime"
+
+(** This functions is the converse of the {!strptime} function.
+  [strftime fmt data] convert a a [tm] structure [data] into a string
+  according to the format specified by [fmt]. *)
+external strftime: string -> Unix.tm -> string = "caml_extunix_strftime"
+
+END
+
