@@ -6,6 +6,7 @@
   * ptrace (minimal)
   * renameat mkdirat
   * mlockall munlockall
+  * strftime strptime asctime
 * Separate configure test for fsync and fdatasync
 
 0.0.1 - 7 Nov 2010
